--- a/work.html
+++ b/work.html
@@ -193,9 +193,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.matchHeight.js"></script>
-    <script src="js/jquery.bootstrap-autohidingnavbar.js"></script>
+    <script src="js/plugins.js"></script>
     <script src="js/custom.js">></script>
   </body>
 </html>
