Hover scale change & .announcement class added

--- a/work.html
+++ b/work.html
@@ -106,10 +106,15 @@
             </div>
             <!-- TESTIMONIAL -->
             <div class="grid-item block-text">
-              <div class="testimonial">
+              <!-- <div class="testimonial">
                 <div class="block-truncate">
                   <p>Needless to say, everyone at Comedy Central is ecstatic and loves how the open turned out. From the initial storyboards, I knew that this direction had tremendous potential. The team at T&F went above and beyond and delivered the perfect open and packaging for the event. Concept, design, writing, editing, animation, finishing, project management - on every front, it was everything I'd hoped it would be.</p>
                   <p>Executive Creative Director, Comedy Central</p>
+                </div>
+              </div> -->
+              <div class="announcement">
+                <div class="block-truncate-h2">
+                  <h2>Good creative comes from talented people. Great creative comes from a perfect marriage of top talent with genuine client/partner relationships.</h2>
                 </div>
               </div>
             </div>
