--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <section>
       <div class="container-fluid">
         <div class="featured-content">
-          <div class="featured-item">
+          <div class="featured-item full-width">
             <a href="work-single.html">
               <img src="img/feature-01.jpg" alt="Map of Hell">
               <h4 class="top-left white-text">National Geographic Channel</h4>
             </a>
           </div>
-          <div class="featured-item">
+          <div class="featured-item full-width">
             <a href="work-single.html">
               <img src="img/feature-02.gif" alt="13 Nights of Halloween">
               <h4 class="top-left white-text">ABC Family</h4>
             </a>
           </div>
-          <div class="featured-item">
+          <div class="featured-item full-width">
             <a href="work-single.html">
               <img src="img/feature-03.jpg" alt="War and Peace">
               <h4 class="top-left white-text">A+E Television Networks</h4>
