--- a/studio.html
+++ b/studio.html
@@ -47,7 +47,7 @@
     <!-- HEADER IMAGE -->
     <section>
       <div class="container-fluid">
-        <div class="full-image">
+        <div class="full-width">
           <img src="img/studio-01.jpg" alt="Studio 01">
         </div>
       </div><!-- /.container-fluid -->
@@ -75,12 +75,12 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="block-studio">
+            <div class="block-half half-width">
               <img src="img/studio-02.jpg" alt="Studio 02">
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="block-studio">
+            <div class="block-half half-width">
               <img src="img/studio-03.jpg" alt="Studio 03">
             </div>
           </div>
@@ -161,7 +161,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="headshot">
+            <div class="block-half half-width">
               <img src="img/scott.jpg" alt="Scott">
               <div class="caption top-left">
                 <h4>Scott Matz</h4>
@@ -170,7 +170,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="headshot">
+            <div class="block-half half-width">
               <img src="img/javier.jpg" alt="Javier">
               <div class="caption top-left">
                 <h4>Javier Gonzalez</h4>
@@ -182,7 +182,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="headshot">
+            <div class="block-half half-width">
               <img src="img/kyle.jpg" alt="Kyle">
               <div class="caption top-left">
                 <h4>Kyle Miller</h4>
@@ -191,7 +191,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="headshot">
+            <div class="block-half half-width">
               <img src="img/keith.jpg" alt="Keith">
               <div class="caption top-left">
                 <h4>Keith Endow</h4>
@@ -203,7 +203,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="headshot">
+            <div class="block-half half-width">
               <img src="img/morgan.jpg" alt="Morgan">
               <div class="caption top-left">
                 <h4>Morgan Goldberg</h4>
@@ -212,7 +212,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="headshot">
+            <div class="block-half half-width">
               <img src="img/ken.jpg" alt="">
               <div class="caption top-left">
                 <h4>Ken Kreuger</h4>
@@ -226,6 +226,7 @@
     </section>
 
     <!-- CLIENTS LIST -->
+    <div class="studio-articles">
     <section class="section-article">
       <div class="container-fluid">
 
@@ -291,7 +292,7 @@
     </section>
 
     <!-- PRESS/RECOGNITION -->
-    <section class="section-article-last">
+    <section class="section-article">
       <div class="container-fluid">
 
         <div class="row">
@@ -316,6 +317,7 @@
 
       </div><!-- /.container-fluid -->
     </section>
+    </div>
 
 
     <!-- FOOTER -->
