--- a/work-single.html
+++ b/work-single.html
@@ -46,7 +46,7 @@
     <!-- HEADER IMAGE -->
     <section>
       <div class="container-fluid">
-        <div class="full-image">
+        <div class="full-width">
           <img src="img/moh-01.jpg" alt="Map of Hell 1">
         </div>
       </div><!-- /.container-fluid -->
@@ -90,18 +90,18 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="block-project-asset single">
+            <div class="block-half single half-width">
               <img src="img/moh-02.jpg" alt="Map of Hell 2">
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="block-project-asset single">
+            <div class="block-half single half-width">
               <img src="img/moh-03.jpg" alt="Map of Hell 3">
             </div>
           </div>
-        </div>
+        </div><!-- /.row -->
 
-        <div>
+        <div class="full-width">
           <img src="img/moh-04.jpg" alt="Map of Hell 4">
         </div>
 
@@ -119,7 +119,7 @@
               <p>Aliquam tincidunt libero dictum sodales tincidunt. Integer convallis elit eros, vitae bibendum mi ornare a. Etiam eu leo urna. Sed imperdiet nunc sed libero pellentesque mattis. Aliquam id iaculis ante. Nullam nec gravida justo. Suspendisse pulvinar consectetur dolor eget iaculis. Suspendisse et nisi vitae nibh ullamcorper cursus sed vitae ipsum. Fusce bibendum justo vel nibh gravida, sit amet laoreet arcu cursus. Sed vulputate nibh eu nulla ullamcorper tempus.</p>
             </div><!-- /.info -->
           </div>
-        </div>
+        </div><!-- /.row -->
 
       </div><!-- /.container-fluid -->
     </section>
@@ -128,7 +128,7 @@
     <section>
       <div class="container-fluid">
 
-        <div>
+        <div class="full-width">
           <img src="img/moh-05.jpg" alt="Map of Hell 5">
         </div>
 
@@ -168,15 +168,15 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="block-project-asset double">
+            <div class="block-half double half-width">
               <img src="img/moh-06.jpg" alt="Map of Hell 6">
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="block-project-asset single">
+            <div class="block-half single half-width">
               <img src="img/moh-08.jpg" alt="Map of Hell 8">
             </div>
-            <div class="block-project-asset block-text">
+            <div class="block-half block-text">
               <div class="callout">
                 <p>Suspendisse pulvinar consectetur dolor eget iaculis. Suspendisse et nisi vitae nibh ullamcorper cursus sed vitae ipsum. Fusce bibendum justo vel nibh gravida, sit amet laoreet arcu cursus. Sed vulputate nibh eu nulla ullamcorper tempus.</p>
               </div>
@@ -186,15 +186,15 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="block-project-asset single">
+            <div class="block-half single half-width">
               <img src="img/moh-09.gif" alt="Map of Hell 9">
             </div>
-            <div class="block-project-asset single">
+            <div class="block-half single half-width">
               <img src="img/moh-10.jpg" alt="Map of Hell 10">
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="block-project-asset double">
+            <div class="block-half double half-width">
               <img src="img/moh-11.jpg" alt="Map of Hell 11">
             </div>
           </div>
@@ -236,7 +236,7 @@
     <section>
       <div class="container-fluid">
 
-        <div>
+        <div class="full-width">
           <img src="img/moh-12.jpg" alt="Map of Hell 12">
         </div>
 
