--- a/work.html
+++ b/work.html
@@ -39,13 +39,13 @@
     <section class="section-notitle">
       <div class="container-fluid">
         <div class="featured-content">
-          <div class="featured-item">
+          <div class="featured-item full-width">
             <a href="work-single.html">
               <img src="img/feature-01.jpg" alt="Map of Hell">
               <h4 class="top-left white-text">National Geographic Channel</h4>
             </a>
           </div>
-          <div class="featured-item">
+          <div class="featured-item full-width">
             <a href="work-single.html">
               <img src="img/feature-02.gif" alt="13 Nights of Halloween">
               <h4 class="top-left white-text">ABC Family</h4>
@@ -73,7 +73,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6">
-            <div class="grid-item double">
+            <div class="grid-item double half-width">
               <a href="work-single.html">
                 <img src="img/grid-lg-01.jpg" alt="Clangers">
                 <h4 class="top-left white-text">Sprout</h4>
@@ -81,13 +81,13 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="grid-item single">
+            <div class="grid-item single half-width">
               <a href="work-single.html">
                 <img src="img/grid-sm-01.jpg" alt="Epidemic">
                 <h4 class="top-left white-text">Participant</h4>
               </a>
             </div>
-            <div class="grid-item single">
+            <div class="grid-item single half-width">
               <a href="work-single.html">
                 <img src="img/grid-sm-02.jpg" alt="War and Peace">
                 <h4 class="top-left white-text">A+E Television Networks</h4>
@@ -98,7 +98,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="grid-item single">
+            <div class="grid-item single half-width">
               <a href="work-single.html">
                 <img src="img/grid-sm-03.gif" alt="President's Day Off">
                 <h4 class="top-left">TBS</h4>
@@ -106,21 +106,21 @@
             </div>
             <!-- TESTIMONIAL -->
             <div class="grid-item block-text">
-              <!-- <div class="testimonial">
+              <!-- <div class="callout">
                 <div class="block-truncate">
                   <p>Needless to say, everyone at Comedy Central is ecstatic and loves how the open turned out. From the initial storyboards, I knew that this direction had tremendous potential. The team at T&F went above and beyond and delivered the perfect open and packaging for the event. Concept, design, writing, editing, animation, finishing, project management - on every front, it was everything I'd hoped it would be.</p>
                   <p>Executive Creative Director, Comedy Central</p>
                 </div>
               </div> -->
-              <div class="announcement">
-                <div class="block-truncate-h2">
-                  <h2>Good creative comes from talented people. Great creative comes from a perfect marriage of top talent with genuine client/partner relationships.</h2>
+              <div class="callout-loud">
+                <div class="block-truncate-loud">
+                  <p>Good creative comes from talented people. Great creative comes from a perfect marriage of top talent with genuine client/partner relationships.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="grid-item double">
+            <div class="grid-item double half-width">
               <a href="work-single.html">
                 <img src="img/grid-lg-02.jpg" alt="Stand Up To Cancer">
                 <h4 class="top-left">Tenth Planet</h4>
@@ -131,7 +131,7 @@
 
         <div class="row">
           <div class="col-sm-6">
-            <div class="grid-item double">
+            <div class="grid-item double half-width">
               <a href="work-single.html">
                 <img src="img/grid-lg-03.jpg" alt="The Roast of James Franco">
                 <h4 class="top-left white-text">Comedy Central</h4>
@@ -139,13 +139,13 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="grid-item single">
+            <div class="grid-item single half-width">
               <a href="work-single.html">
                 <img src="img/grid-sm-05.gif" alt="World Food Program films">
                 <h4 class="top-left white-text">World Food Program</h4>
               </a>
             </div>
-            <div class="grid-item single">
+            <div class="grid-item single half-width">
               <a href="">
                 <img src="img/grid-sm-06.jpg" alt="He Named Me Malala">
                 <h4 class="top-left white-text">Participant Media</h4>
